--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android = "http://schemas.android.com/apk/res/android"
     package = "com.example.smstranslate">
     <uses-permission android:name = "android.permission.READ_CONTACTS" />
+    <uses-permission android:name = "android.permission.READ_SMS" />
     <application
         android:allowBackup = "true"
         android:theme = "@style/AppTheme.NoActionBar"
