--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,28 @@
-<?xml version = "1.0" encoding = "utf-8"?>
-<manifest xmlns:android = "http://schemas.android.com/apk/res/android"
-    package = "com.example.smstranslate">
-    <uses-permission android:name = "android.permission.READ_CONTACTS" />
-    <uses-permission android:name = "android.permission.READ_SMS" />
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.smstranslate">
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+
     <application
-        android:allowBackup = "true"
-        android:theme = "@style/AppTheme.NoActionBar"
-        android:icon = "@mipmap/ic_launcher"
-        android:label = "@string/app_name"
-        android:roundIcon = "@mipmap/ic_launcher_round"
-        android:supportsRtl = "true">
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".InboxItem"></activity>
         <activity
-            android:name = ".MainActivity"
-            android:configChanges = "keyboardHidden|orientation|screenSize">
+            android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
-                <action android:name = "android.intent.action.MAIN" />
-                <action android:name = "android.intent.action.CREATE_SHORTCUT" />
-                <category android:name = "android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
